---
source: crates/action-runner/tests/dep_graph_test.rs
assertion_line: 167
expression: graph.to_dot()
---
digraph {
    0 [ label="SetupNodeTool(16.17.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 [ label="InstallNodeDeps(16.17.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 [ label="SyncNodeProject(basic)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    3 [ label="RunTarget(basic:test)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    4 [ label="RunTarget(basic:lint)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    5 [ label="SyncNodeProject(chain)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    6 [ label="RunTarget(chain:a)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    7 [ label="RunTarget(chain:b)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    8 [ label="RunTarget(chain:c)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    9 [ label="RunTarget(chain:d)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    10 [ label="RunTarget(chain:e)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    11 [ label="RunTarget(chain:f)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 -> 0 [ arrowhead=box, arrowtail=box]
    2 -> 0 [ arrowhead=box, arrowtail=box]
    3 -> 1 [ arrowhead=box, arrowtail=box]
    3 -> 2 [ arrowhead=box, arrowtail=box]
    4 -> 1 [ arrowhead=box, arrowtail=box]
    4 -> 2 [ arrowhead=box, arrowtail=box]
    5 -> 0 [ arrowhead=box, arrowtail=box]
    6 -> 1 [ arrowhead=box, arrowtail=box]
    6 -> 5 [ arrowhead=box, arrowtail=box]
    7 -> 1 [ arrowhead=box, arrowtail=box]
    7 -> 5 [ arrowhead=box, arrowtail=box]
    8 -> 1 [ arrowhead=box, arrowtail=box]
    8 -> 5 [ arrowhead=box, arrowtail=box]
    9 -> 1 [ arrowhead=box, arrowtail=box]
    9 -> 5 [ arrowhead=box, arrowtail=box]
    10 -> 1 [ arrowhead=box, arrowtail=box]
    10 -> 5 [ arrowhead=box, arrowtail=box]
    11 -> 1 [ arrowhead=box, arrowtail=box]
    11 -> 5 [ arrowhead=box, arrowtail=box]
    10 -> 11 [ arrowhead=box, arrowtail=box]
    9 -> 10 [ arrowhead=box, arrowtail=box]
    8 -> 9 [ arrowhead=box, arrowtail=box]
    7 -> 8 [ arrowhead=box, arrowtail=box]
    6 -> 7 [ arrowhead=box, arrowtail=box]
}

